# race-detector-experiments

./: .gitignore  .gitmodules  AGENTS.md  README.md  SURVEY.md  conftest.py  pyproject.toml  run.py  run_common.py  run_with_gsan.py
analysis/: common.py  end_to_end_runtime.py  end_to_end_time_itemized.py  end_to_end_time_overhead.py  end_to_end_time_overhead_aiter.py
benchmarks/aiter/: inventory.md  passing_files.md  pytest_files.txt
benchmarks/tritonbench/: inventory.md  test_files.txt
extracted_kernels/: demo_add.py
patches/: aiter-cuda-experimental.patch
scripts/: run_aiter_baseline.sh  run_aiter_gsan.sh  run_aiter_triton_viz.sh  run_tritonbench_baseline.sh  run_tritonbench_gsan.sh  run_tritonbench_triton_viz.sh  script_runner.py  setup_cuda_gsan.sh
